# strategy-game

./: .gitignore  Cargo.toml  README.md  test.sh
.agents/: AGENTS.md
.github/workflows/: static.yml
docs/: app.js  index.html  style.css
docs-src/: index.html  package-lock.json  package.json  vite.config.js
docs-src/src/: App.svelte  app.css
docs/assets/: index-6Ysn-1AN.js  index-B7LqaP_e.js  index-BDzKVha3.js  index-BQHKBgXK.js  index-BW-52cWK.css  index-C3t7yBcM.css  index-C5ZrzEZM.css  index-CJwX_5oN.js  index-CKagN0i2.js  index-CSMozmbb.js  index-CZWaIh0P.css  index-DMd9kPrU.css  index-DOTjFX9s.css  index-DmMOn0Vu.js  index-DngS_lLx.css  index-DwjjfqAp.js  index-LRbsgPAc.js
src/: ai.rs  hex.rs  hud.rs  lib.rs  main.rs  rendering.rs  simulation.rs  ui_tests.rs
tests/: match_simulation_tests.rs
