[package]
name = "strategy-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy_egui = "0.28.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Enable high optimization for dependencies (like Bevy) even in dev builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
